--- a/Browse.html
+++ b/Browse.html
@@ -48,7 +48,7 @@
   <div id="browse">
   <div class="sidebar">
     <div class="search-container"> <!-- 新增的 div 容器 -->
-      <p>EigenTree</p>
+<!--      <p>EigenTree</p>-->
       <input id="searchInput" placeholder="Search..." type="text"/>
       <button id="searchButton" onclick="searchSpecies()">Search</button>
     </div>
